--- a/public/app/caixas/views/view-caixa.client.view.html
+++ b/public/app/caixas/views/view-caixa.client.view.html
@@ -17,6 +17,23 @@
         </div>
     </div>
     <div class="wrapper wrapper-content animated fadeInRight">
+
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="v-toolmenu-top-row">
+                    <h5>Caixa do dia: {{ caixa.data_caixa | date: 'dd/MM/yyyy' }}</h5>
+
+                    <div class="pull-right">
+                        <div class="btn-group">
+                            <a type="button" ng-href="#!/caixas/{{ caixa._id }}/edit" class="btn btn-xs btn-white active" ng-click="toggleViews.toggle('edit_caixa_page', 'check')">Check</a>
+                            <a type="button" ng-href="#!/caixas/{{ caixa._id }}/edit" class="btn btn-xs btn-white" ng-click="toggleViews.toggle('edit_caixa_page', 'edit')">Edição</a>
+                            <!--<button type="button" class="btn btn-xs btn-white">Annual</button>-->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- ToolMenu -->
+
         <div class="row">
 
             <div class="col-sm-9">
